deploy/webdid.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdid
  namespace: xfsc-ocm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdid
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webdid
    spec:
      volumes:
      - name: webdid
        configMap:
          name: webdid
          items:
          - key: did.json
            path: did.json
      containers:
      - name: webdid
        command: ["python", "-m", "http.server", "-d", "/webdid"]
        image: python:3.12.0-alpine3.18
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /webdid
          name: webdid
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webdid
  name: webdid
  namespace: xfsc-ocm
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: webdid
